tests/samples/negative/pattern_matching/match_guarded_wildcard_not_exhaustive.ax
module match_guarded_wildcard_not_exhaustive;

enum Choice: u8 {
  one = 1,
  two = 2,
}

fn main() -> i32 {
  return match Choice.one {
    _ if true => 1,
  };
}
